tests/corpus/negative/N09-async/source.py
async def fetch_value():
    return 1

